--- a/src/pages/global/layout.html
+++ b/src/pages/global/layout.html
@@ -11,8 +11,9 @@
 
 <body>
     {{block 'main_content'}}{{/block}}
-
+    <script src="http://localhost:3000/webpack-dev-server.js"></script>
     {{block 'footer_content'}}{{/block}}
+
 </body>
 
 </html>
