--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,7 +1,7 @@
-{{extend 'global/layout.html'}}
+{{extend '../global/layout.html'}}
 
 {{block 'main_content'}}
-<div class="main">index</div>
+<div class="main">index <%= name %> 11</div>
 {{/block}}
 
 {{block 'footer_content'}}
