--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,7 @@
 {{extend '../global/layout.html'}}
 
 {{block 'main_content'}}
-<div class="main">index 1111{{title}}</div>
+<div class="main">abput page - {{title}}</div>
 {{/block}}
 
 {{block 'footer_content'}}
