基本框架成型，分离js css,抽取公共代码

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -1,7 +1,11 @@
 {{extend '../global/layout.html'}}
 
+{{block 'head_content'}}
+<!--injectcss-->
+{{/block}}
 {{block 'main_content'}}
 <div class="main">abput page - {{title}}</div>
+<h1>about page</h1>
 {{/block}}
 
 {{block 'footer_content'}}
