--- a/src/pages/global/layout.html
+++ b/src/pages/global/layout.html
@@ -6,11 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>node-bff</title>
+
     {{block 'head_content'}}{{/block}}
 </head>
 
 <body>
     {{block 'main_content'}}{{/block}}
+
+    <!-- <script src="https://code.jquery.com/jquery-3.1.0.js">
+    </script> -->
+
     {{block 'footer_content'}}{{/block}}
 
 </body>
