--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,5 +1,10 @@
 {{extend '../global/layout.html'}}
 
+{{block 'head_content'}}
+<!--injectcss-->
+{{/block}}
+
+
 {{block 'main_content'}}
 <div class="main">index 1111{{title}}</div>
 {{/block}}
