--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -1,6 +1,9 @@
 {{extend '../layout/layout.html'}}
 
 {{block 'head_content'}}
+<script>
+    var allData = {{@allData}}
+</script>
 <!--injectcss-->
 {{/block}}
 
